--- a/orbitez/styles/style.scss
+++ b/orbitez/styles/style.scss
@@ -7,8 +7,10 @@
 	// TODO: move to _variables.scss
 	$color-main: #04dbe0;
 
-	$title-shadow: 1px 0 38px #04dbe0, 0 1px 0 #00d2e7;
-	$text-shadow: 1px 0 18px #04dbe0, 0 1px 0 #00d2e7;
+	$box-shadow: 0 0 5px $color-main;
+	$hover-shadow: 1px 0 38px $color-main;
+	$title-shadow: 1px 0 38px $color-main, 0 1px 0 #00d2e7;
+	$text-shadow: 1px 0 18px $color-main, 0 1px 0 #00d2e7;
 
 	$font-sci-fi: "AnitaRegular", "Calibri", "Arial", sans-serif;
 	$font-default: "Calibri", "Arial", sans-serif;
@@ -41,6 +43,22 @@
 		font-family: "AnitaRegular";
 		src: url('fonts/anita.ttf');
 		font-display: swap;
+	}
+
+	// TODO: move to _animation.scss
+	@keyframes rotate {
+		from {transform: rotate(0deg);}
+		to {transform: rotate(360deg);}
+	}
+
+	@keyframes rotatee {
+		from {transform: rotate(0deg);}
+		to {transform: rotate(-360deg);}
+	}
+	
+	@keyframes pulse {
+		from {box-shadow: inset 0px 5px 76px 0px rgba(4, 219, 224, 0.3), 0 0 10px 5px #04dbe0;}
+		to {box-shadow: inset 0px 5px 76px 0px rgba(4, 219, 224, 0.3), 0 0 30px 5px #04dbe0;}
 	}
 
 
@@ -77,15 +95,16 @@ h1 {
 }
 
 h2 {
-	text-shadow: 1px 0 38px #04dbe0, 0 1px 0 #00d2e7;
 	font-weight: 400;
 	font-size: 32px;
 	line-height: 1.6;
+	text-shadow: $title-shadow;
 }
 
 h3 {
 	font-size: 24px;
 	line-height: 120%; // 29px
+	text-shadow: $title-shadow;
 }
 
 // p {
@@ -136,10 +155,20 @@ select {
 	padding-top: 35px;
 	padding-bottom: 45px;
 
-	&__link {
-		min-width: 423px;
+	&__linkLeft {
 		display: block;
-		//margin: 0 5%;
+		min-width: 392px;
+	}
+
+	&__linkRight {
+		display: block;
+		min-width: 392px;
+		text-align: end;
+	}
+
+	&__logo {
+		display: block;
+		min-width: 392px;
 	}
 
 	&__title {
@@ -159,10 +188,10 @@ select {
 	justify-content: space-between;
 
 	// TODO: need refactoring
-	&__left 	{width: 450px;}
-	&__center 	{width: calc(100% - 900px);}
+	&__left 	{width: 400px;}
+	&__center 	{width: calc(100% - 800px);}
 	&__right 	{
-		width: 450px;
+		width: 400px;
 		display: flex;
     	justify-content: end;
 	}
@@ -217,7 +246,8 @@ select {
 	}
 
 	&--center {
-		margin: 0 auto;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 	// TODO: refactor
@@ -248,26 +278,45 @@ select {
 }
 
 .panel {
-	background-color: transparent;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	//width: 400px;
 	height: 100px;
-	padding: 0 40px;
+	padding-right: 40px;
 	background: linear-gradient(90deg, rgba(0,0,0,0) 5%, rgba(0,0,0,0.1) 20%, rgba(0,0,0,0.2) 100%);
 	text-shadow: $text-shadow;
 
 	&__icon {
+		position: relative;
 		width: 72px;
 		height: 72px;
 		margin-inline-end: 25px;
 		border-radius: 50%;
 		background-color: #090921;
 		background-image: url("img/element-wheel.png"); // TODO: need replace to svg or css
+
+		&:hover {
+			box-shadow: $hover-shadow;
+			animation: rotate  1s ease-in-out;
+
+			.panel__img {
+				animation: rotatee  1s ease-in-out;
+			}
+		}
+	}
+
+	&__img {
+		position: absolute;
+		top: 0;
+		left: 0;
 	}
 
 	&__info {
+		&:hover {
+			text-shadow: $hover-shadow;
+		}
+
 		&::before {
 			content: url("img/element-panel-top-line.png");
 			display: block;
@@ -293,6 +342,7 @@ select {
 		vertical-align: top;
 		font-size: 20px;
 		line-height: 1;
+		cursor: pointer;
 	}
 
 	&__num {
@@ -303,15 +353,26 @@ select {
 }
 
 .listBlock {
-	width: 324px;
+	width: 100%;
+	max-width: 324px;
 	margin-bottom: 120px; // design 150px
 
 	&--wide {
-		width: 100%;
+		max-width: 100%;
+	}
+
+	&:hover {
+		.listBlock__list {
+			padding: 12px;
+			border-radius: 4px;
+			border: 1px solid #04dbe0;
+			box-shadow: 1px 0 18px #04dbe0;
+		}
 	}
 
 	&__list {
 		margin-top: 30px; // design 50px
+		transition: padding 1s, box-shadow 1s;
 	}
 
 	&__item {
@@ -329,10 +390,15 @@ select {
 
 		&:hover {
 			border-color: #04dbe0;
-			box-shadow: #04dbe0 0 0 5px;
+			box-shadow: $box-shadow;
 			text-shadow: #04dbe0 1px 0 18px;
 			color: #FFFFFF;
 			cursor: pointer;
+
+			.listBlock__link {
+				opacity: 1;
+				visibility: visible;
+			}
 		}
 
 		&--active {
@@ -360,24 +426,62 @@ select {
 		content: url("img/icon-external-link.svg");
 		position: absolute;
 		right: 16px;
-		top: center;
 		display: block;
 		width: 24px;
 		height: 24px;
+		border-radius: 4px;
+		opacity: 0;
+		visibility: hidden;
+		transition: $transition-time opacity, $transition-time visibility, $transition-time box-shadow, $transition-time transform;
+
+		&:hover {
+			transform: scale(1.3, 1.3);
+			border: 1px solid #04dbe0;
+			box-shadow: 0 0 8px #04dbe0;
+		}
 	}
 }
 
-.link {
-	color: #FFFFFF;
-	font-size: 28px;
-	line-height: 32px;
-	//text-align: center;
-	text-decoration: underline;
+.payMethod {
+	width: 100%;
+	max-width: 324px;
+	margin-top: 40px;
 
-	&:hover {
-		color: #857a98;
-		text-shadow: $text-shadow;
+	&__title {
+		margin-bottom: 24px;
 	}
+	
+	&__switcher {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		padding: 6px;
+		border-radius: 50px;
+		border: 1px solid #04dbe0;
+		box-shadow: 0 0 10px $color-main, inset 0 0 5px #00d2e7;
+
+		&:hover {
+			.payMethod__item {
+				text-shadow: $text-shadow;
+			}
+		}
+	}
+
+	&__item {
+		text-align: center;
+		font-size: 24px;
+		line-height: 1.2;
+	}
+
+	&__prev {
+		cursor: pointer;
+	}
+
+	&__next {
+		cursor: pointer;
+		transform: rotate(180deg);
+	}
+
 }
 
 .planet {
@@ -402,10 +506,19 @@ select {
 	&__btn {
 		margin-top: 96px;
 		margin-bottom: 50px;
-		background-image: url("img/btn-bg.png");
-		background-repeat: no-repeat;
-		border: 1px solid #FFFFFF;
-		background-color: rgba(4, 219, 224, 0.11);
-		box-shadow: inset 0px 5px 76px 0px rgba(4, 219, 224, 0.3), 0 0 10px 5px #04dbe0;
+		animation: pulse 1s infinite alternate;
+	}
+}
+
+.link {
+	color: #FFFFFF;
+	font-size: 28px;
+	line-height: 32px;
+	//text-align: center;
+	text-decoration: underline;
+
+	&:hover {
+		color: #857a98;
+		text-shadow: $text-shadow;
 	}
 }
