--- a/orbitez/styles/style-lp.scss
+++ b/orbitez/styles/style-lp.scss
@@ -1,4 +1,13 @@
+.headerLp {
+    height: auto;
+}
+
 .lp {
+
+    &__logo {
+        margin-top: 60px;
+    }
+
     &__text {
         padding: 0 50px;
         text-align: center;
