--- a/orbitez/styles/style.scss
+++ b/orbitez/styles/style.scss
@@ -51,7 +51,7 @@
 		to {transform: rotate(360deg);}
 	}
 
-	@keyframes rotatee {
+	@keyframes rotate-reverse {
 		from {transform: rotate(0deg);}
 		to {transform: rotate(-360deg);}
 	}
@@ -169,6 +169,13 @@ select {
 	&__logo {
 		display: block;
 		min-width: 392px;
+		height: 71px;
+	}
+
+	&__logoImg {
+		display: block;
+		width: 245px;
+		height: 71px;
 	}
 
 	&__title {
@@ -188,13 +195,9 @@ select {
 	justify-content: space-between;
 
 	// TODO: need refactoring
-	&__left 	{width: 400px;}
-	&__center 	{width: calc(100% - 800px);}
-	&__right 	{
-		width: 400px;
-		display: flex;
-    	justify-content: end;
-	}
+	&__left 	{width: 324px;}
+	&__center 	{width: calc(100% - 648px);}
+	&__right 	{width: 324px;}
 }
 
 .container {
@@ -277,7 +280,7 @@ select {
 	background-image: url("img/bg-blocks-timer-2.png");
 }
 
-.panel {
+.dashboard {
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -300,8 +303,8 @@ select {
 			box-shadow: $hover-shadow;
 			animation: rotate  1s ease-in-out;
 
-			.panel__img {
-				animation: rotatee  1s ease-in-out;
+			.dashboard__img {
+				animation: rotate-reverse  1s ease-in-out;
 			}
 		}
 	}
@@ -338,7 +341,7 @@ select {
 
 	&__text {
 		display: inline-block;
-		margin-left: 14px;
+		margin: 0 14px;
 		vertical-align: top;
 		font-size: 20px;
 		line-height: 1;
@@ -347,6 +350,7 @@ select {
 
 	&__num {
 		display: inline-block;
+		margin: 0;
 		font-size: 30px;
 		line-height: 1;
 	}
@@ -355,6 +359,7 @@ select {
 .listBlock {
 	width: 100%;
 	max-width: 324px;
+	min-height: 420px;
 	margin-bottom: 120px; // design 150px
 
 	&--wide {
@@ -370,8 +375,15 @@ select {
 		}
 	}
 
+	&__title {
+		margin-bottom: 30px; // design 50px
+	}
+
+	&__text {
+		font-size: 20px;
+	}
+
 	&__list {
-		margin-top: 30px; // design 50px
 		transition: padding 1s, box-shadow 1s;
 	}
 
