--- a/orbitez/styles/index.css
+++ b/orbitez/styles/index.css
@@ -11,7 +11,31 @@ html, body {
 input[type=checkbox] {
     cursor: pointer;
 }
+.image-cropper {
 
+    width: 35px;
+  
+    height: 35px;
+  
+    position: relative;
+  
+    overflow: hidden;
+  
+    border-radius: 50%;
+  
+  }
+  
+.image-cropper__image {
+  
+    display: inline;
+  
+    margin: 0 auto;
+  
+    height: 100%;
+  
+    min-width: 100%;
+  
+  }
 #overlays, #connecting {
     opacity: 0;
     position: absolute;
