--- a/orbitez/styles/style.scss
+++ b/orbitez/styles/style.scss
@@ -57,8 +57,11 @@
 	}
 	
 	@keyframes pulse {
-		from {box-shadow: inset 0px 5px 76px 0px rgba(4, 219, 224, 0.3), 0 0 10px 5px #04dbe0;}
-		to {box-shadow: inset 0px 5px 76px 0px rgba(4, 219, 224, 0.3), 0 0 30px 5px #04dbe0;}
+		0% {box-shadow: inset 0 4px 64px rgba(4, 219, 224, 0.3), 0 0 20px #04dbe0;}
+		25% {box-shadow: inset 0 4px 64px rgba(4, 219, 224, 0.3), 0 0 30px #04dbe0;}
+		50% {box-shadow: inset 0 4px 64px rgba(4, 219, 224, 0.3), 0 0 40px #04dbe0;}
+		75% {box-shadow: inset 0 4px 64px rgba(4, 219, 224, 0.3), 0 0 50px #04dbe0;}
+		100% {box-shadow: inset 0 4px 64px rgba(4, 219, 224, 0.3), 0 0 60px #04dbe0;}
 	}
 
 
@@ -155,20 +158,28 @@ select {
 	padding-top: 35px;
 	padding-bottom: 45px;
 
+	&--hud {
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: auto;
+	}
+
 	&__linkLeft {
 		display: block;
-		min-width: 392px;
+		min-width: 372px;
 	}
 
 	&__linkRight {
 		display: block;
-		min-width: 392px;
+		min-width: 372px;
 		text-align: end;
 	}
 
 	&__logo {
 		display: block;
-		min-width: 392px;
+		min-width: 372px;
 		height: 71px;
 	}
 
@@ -183,11 +194,6 @@ select {
 		text-align: center;
 		text-shadow: 1px 0 38px #04dbe0, 0 1px 0 #00d2e7;
 	}
-}
-
-.hud-header {
-	position: absolute;
-	width: 100vw;
 }
 
 .page {
@@ -235,7 +241,7 @@ select {
 	text-shadow: 0 1px 0 #00d2e7;
 	border: 1px solid #c3beca;
     cursor: pointer;
-    transition: all $transition-time ease-out;
+    transition: all 1s ease-out;
 	//@include button(-size, -width, -height);
 
 	&:hover {
@@ -262,33 +268,47 @@ select {
 		background-image: url("img/btn-bg.png");
 		background-repeat: no-repeat;
 		border: 1px solid #FFFFFF;
-		background-color: rgba(4, 219, 224, 0.11);
-		box-shadow: inset 0px 5px 76px 0px rgba(4, 219, 224, 0.3), 0 0 10px 5px #04dbe0;
-	}
-}
-
-.pageNav {
-	& > * {
-		margin: 50px auto;
+		animation: pulse 1.5s linear infinite alternate;
 	}
 }
 
 .blocksTimer {
+	position: relative;
 	display: block;
 	width: 400px;
 	height: 140px;
 	background-image: url("img/bg-blocks-timer-2.png");
+	color: white;
+
+	&__num {
+		position: absolute;
+		bottom: 59px;
+		right: 24px;
+		font-size: 20px;
+	}
+
+	&__text {
+		position: absolute;
+		bottom: 30px;
+		left: 161px;
+	}
 }
 
 .dashboard {
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	//width: 400px;
+	min-width: 372px;
 	height: 100px;
-	padding-right: 40px;
+	padding-right: 20px;
 	background: linear-gradient(90deg, rgba(0,0,0,0) 5%, rgba(0,0,0,0.1) 20%, rgba(0,0,0,0.2) 100%);
 	text-shadow: $text-shadow;
+
+	&--hud {
+		//background: linear-gradient(90deg, rgba(0,0,0,0) 5%, rgba(255,255,255,0.1) 20%, rgba(255,255,255,0.2) 100%);
+		background: linear-gradient(90deg, rgba(0,0,0,0) 5%, rgba(0,0,0,0.3) 20%, rgba(0,0,0,0.7) 100%);
+		color: white;
+	}
 
 	&__icon {
 		position: relative;
@@ -298,6 +318,7 @@ select {
 		border-radius: 50%;
 		background-color: #090921;
 		background-image: url("img/element-wheel.png"); // TODO: need replace to svg or css
+		cursor: pointer;
 
 		&:hover {
 			box-shadow: $hover-shadow;
@@ -343,7 +364,7 @@ select {
 		display: inline-block;
 		margin: 0 14px;
 		vertical-align: top;
-		font-size: 20px;
+		font-size: 18px;
 		line-height: 1;
 		cursor: pointer;
 	}
@@ -351,8 +372,12 @@ select {
 	&__num {
 		display: inline-block;
 		margin: 0;
-		font-size: 30px;
+		font-size: 24px;
 		line-height: 1;
+	}
+
+	&__symbol {
+		margin-inline-end: 6px;
 	}
 }
 
@@ -448,8 +473,6 @@ select {
 
 		&:hover {
 			transform: scale(1.3, 1.3);
-			border: 1px solid #04dbe0;
-			box-shadow: 0 0 8px #04dbe0;
 		}
 	}
 }
@@ -516,9 +539,8 @@ select {
 	}
 
 	&__btn {
-		margin-top: 96px;
+		margin-top: 47px; // 96px
 		margin-bottom: 50px;
-		animation: pulse 1s infinite alternate;
 	}
 }
 
@@ -530,7 +552,7 @@ select {
 	text-decoration: underline;
 
 	&:hover {
-		color: #857a98;
+		color: #bbb1cd;
 		text-shadow: $text-shadow;
 	}
 }
