--- a/orbitez/styles/index.css
+++ b/orbitez/styles/index.css
@@ -12,31 +12,21 @@ input[type=checkbox] {
     cursor: pointer;
 }
 .image-cropper {
-
     width: 35px;
-  
     height: 35px;
-  
     position: relative;
-  
     overflow: hidden;
-  
     border-radius: 50%;
-  
   }
   
 .image-cropper__image {
-  
     display: inline;
-  
     margin: 0 auto;
-  
     height: 100%;
-  
     min-width: 100%;
-  
   }
-#overlays, #connecting {
+
+ /* #overlays, #connecting { 
     opacity: 0;
     position: absolute;
     left: 0;
@@ -83,7 +73,7 @@ input[type=checkbox] {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-}
+} */
 #chat_textbox {
     transition: all .5s ease-in-out;
     position: absolute;
@@ -107,23 +97,23 @@ input[type=checkbox] {
     margin-bottom: 10px;
     margin-top: -10px;
 }
-#play-btn {
+/* #play-btn {
     width: 85%;
     margin-bottom: 10px;
-}
+} */
 #spectate-btn {
     width: 13%;
     float: right;
     top: 0;
 }
-#play-btn, #spectate-button {
+/* #play-btn, */ #spectate-button { 
     display: inline;
 }
-#gallery-btn {
+/* #gallery-btn {
     width: 100%;
     margin-bottom: 5px;
-    display: none; /* Visible when skins are loaded */
-}
+    display: none; /* Visible when skins are loaded 
+} */
 #touchpad, #touchCircle, #splitBtn, #ejectBtn {
     position: fixed;
 }
