--- a/orbitez/styles/index.css
+++ b/orbitez/styles/index.css
@@ -1,12 +1,12 @@
 html, body {
-    padding: 0;
+    /* padding: 0;
     margin: 0;
     overflow: hidden;
-    overflow-x: hidden;
+    overflow-x: hidden; */
     -webkit-text-size-adjust: none;
     width: 100%;
     height: 100%;
-    position: fixed;
+    /* position: fixed; */
 }
 input[type=checkbox] {
     cursor: pointer;
