fix mobile style

--- a/orbitez/styles/style.scss
+++ b/orbitez/styles/style.scss
@@ -237,6 +237,7 @@ select {
 		left: 0;
 		right: 0;
 		bottom: auto;
+		z-index: 9;
 	}
 
 	&__linkLeft {
@@ -355,6 +356,7 @@ select {
 		//background: linear-gradient(90deg, rgba(0,0,0,0) 5%, rgba(255,255,255,0.1) 20%, rgba(255,255,255,0.2) 100%);
 		background: linear-gradient(90deg, rgba(0,0,0,0) 5%, rgba(0,0,0,0.3) 20%, rgba(0,0,0,0.7) 100%);
 		color: white;
+		z-index: 9;
 	}
 
 	&__icon {
@@ -611,6 +613,11 @@ select {
 		color: #bbb1cd;
 		text-shadow: $text-shadow;
 	}
+}
+
+.hud {
+	position: fixed;
+	z-index: 0;
 }
 
 
