--- a/orbitez/styles/style.scss
+++ b/orbitez/styles/style.scss
@@ -751,7 +751,7 @@ select {
 	border: 1px solid #04dbe0;
 	box-shadow: 1px 0 18px #04dbe0;
 	background-color: rgba(0,0,0,0.8);
-  margin: 10% auto; /* 15% from the top and centered */
+  margin: 5rem auto;
   padding: 20px;
   border: 1px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
