--- a/orbitez/styles/_globals.scss
+++ b/orbitez/styles/_globals.scss
@@ -253,7 +253,7 @@ select {
 
 
 .btn {
-	display: inline-flex;
+	display: flex;
     align-items: center;
     justify-content: center;
     max-width: 350px;
