--- a/orbitez/styles/hud.scss
+++ b/orbitez/styles/hud.scss
@@ -102,3 +102,23 @@
 		}
 	}
 }
+
+
+.chatInput {
+    position: absolute;
+    left: 10px;
+    bottom: 35px;
+    width: 300px;
+    height: 30px;
+    background: rgba(0, 0, 0, .2);
+    color: #fff;
+    font-family: "Ubuntu";
+    border: 0px;
+    outline: none;
+    transition: all .5s ease-in-out;
+    z-index: 10;
+
+    &:focus {
+        background: rgba(0, 0, 0, .5);
+    }
+}
