--- a/orbitez/styles/index.css
+++ b/orbitez/styles/index.css
@@ -74,7 +74,7 @@ input[type=checkbox] {
     left: 50%;
     transform: translate(-50%, -50%);
 } */
-#chat_textbox {
+/* #chat_textbox {
     transition: all .5s ease-in-out;
     position: absolute;
     z-index: 10;
@@ -91,12 +91,12 @@ input[type=checkbox] {
 }
 #chat_textbox:focus {
     background: rgba(0, 0, 0, .5);
-}
-#footer {
+} */
+/* #footer {
     text-align: center;
     margin-bottom: 10px;
     margin-top: -10px;
-}
+} */
 /* #play-btn {
     width: 85%;
     margin-bottom: 10px;
