--- a/orbitez/styles/style.scss
+++ b/orbitez/styles/style.scss
@@ -2,6 +2,7 @@
 @import "mixin.scss";
 @import "animations.scss";
 @import "globals.scss";
+@import "pop-up.scss";
 
 // Components
 @import "../components/Header/Header.scss";
