--- a/orbitez/components/Planet/Planet.scss
+++ b/orbitez/components/Planet/Planet.scss
@@ -1,8 +1,8 @@
 .planet {
+	padding: 2rem;
 	position: relative;
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-end;
 	align-items: center;
 	//min-height: 880px;
 	//margin-top: 40px;
